--- a/app/style.css
+++ b/app/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -12,5 +12,97 @@ body {
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+}
+
+h1 {
+    top: 10px;
+    position: absolute;
+}
+
+.range-container {
+    position: relative;
+}
+
+input[type='range'] {
+    width: 300px;
+    margin: 18px 0;
+    -webkit-appearance: none;
+}
+
+input[type='range']:focus {
+    outline: none;
+}
+
+input[type='range'] + label {
+    top: -25px;
+    width: 80px;
+    left: 110px;
+    padding: 5px 0;
+    border-radius: 4px;
+    text-align: center;
+    position: absolute;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+/* Chrome and Safari */
+
+input[type='range']::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: tomato;
+}
+
+input[type='range']::-webkit-slider-thumb {
+    width: 24px;
+    height: 24px;
+    margin-top: -7px;
+    background: #000;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    -webkit-appearance: none;
+}
+
+/* Firefox */
+
+input[type='range']::-moz-range-track {
+    width: 100%;
+    height: 13px;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: tomato;
+}
+
+input[type='range']::-moz-range-thumb {
+    width: 24px;
+    height: 24px;
+    margin-top: -7px;
+    background: #000;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    -webkit-appearance: none;
+}
+
+/* IE */
+
+input[type='range']::-ms-track {
+    width: 100%;
+    height: 13px;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: tomato;
+}
+
+input[type='range']::-ms-thumb {
+    width: 24px;
+    height: 24px;
+    margin-top: -7px;
+    background: #000;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    -webkit-appearance: none;
 }
